Spacing fixes

--- a/fullScreen.js/examples/examples.css
+++ b/fullScreen.js/examples/examples.css
@@ -133,7 +133,7 @@ p {
 
 
 #quote {
-	margin-top: 5%;
+	margin-top: 3%;
 	margin-bottom: 1%;
 	text-align: center;
 	line-height: 1.4
@@ -188,7 +188,7 @@ p {
 
 .languages {
 	display: flex;
-	margin-top: 0%;
+	margin-top: -2%;
 	justify-content: center;
 }
 
